selfhost/test/parser/decorator_error_non_constant_arg.out
Error at %FILE_NAME%:1:6
Unexpected token 'identifier', expected one of 'int', 'float', 'true', 'string':
  |  @Foo(a)
          ^